# ucapi_stm32

./: .gitmodules  LICENSE  README.md  meson.build
devconf/: meson.build  stm32f103xx.dc  stm32f103xx.toml
devconf/clock/: clock.toml  clock_stm32f1xx.toml
devconf/flash/: flash.toml  flash_stm32f1xx.toml
include/: clock.h  flash.h  meson.build  rcc.h  system_init.h
include/flash/: flash.h
include/rcc/: rcc.h  rcc_stm32f101xx.h
include/registers/: flash.h  rcc.h
link/: mem.ld  meson.build
source/: clock.c  flash.c  init.c  meson.build  rcc.c  system_init.c
